--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,19 @@ img .logo {
 h1 {
     font-weight: normal;
 }
-
+.frame {
+    width: 80%;
+    margin: auto;
+}
 iframe {
     border: 1px solid #999;
     padding: 40px;
     border-radius: 5px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
 }
