--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,94 @@
+/********** Base *********/
+
 * {
     box-sizing: border-box;
 }
 
-span .header-links {
-    color:red;
+body {
+    font-family: sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+}
+
+/*******************/
+
+
+/********** Style *********/
+
+
+h1, h2, h3 {
+    font-weight: 300;
+}
+
+h1 {
+    font-size: 30px;
+}
+
+h1, .h1, h2, .h2, h3, .h3 {
+    margin-bottom: 20px;
+}
+
+/*******************/
+
+
+/********** Utility *********/
+
+.center {
+    text-align: center;
 }
 
 .green {
     color: #61E5C7;
 }
 
-body {
-    font-family: sans-serif;
-    text-align: center;
-    padding: 50px;
+/*******************/
+
+
+/********** Structure *********/
+
+.section {
+    padding: 60px 0px;
 }
 
-img .logo {
-    margin: auto;
-    height: 200px;
-    width: 100px;
+.green-section {
+    background-color: #61E5C7;
+    color: white;
 }
-h1 {
-    font-weight: normal;
+
+.green-section a {
+    color: white;
+    text-decoration: none;
 }
-.frame {
-    width: 50%;
-    margin: auto;
+
+.green-section .panel {
+    color: #333;
 }
-iframe {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
+
+.jumbo-container p {
+    margin: 50px 0px;
+    font-size: 24px;
 }
+
+.hero-links {
+    font-size: 20px;
+    padding: 10px 0px;
+}
+
+/*******************/
+
+
+/********** Components *********/
+
+.list-image-header {
+    padding: 15px;
+}
+
+.logo-container {
+    padding: 15px;
+}
+.logo-container img{
+    width: 270px;
+}
+
+/*******************/
+
