--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
     font-family: sans-serif;
     font-weight: 300;
     font-size: 18px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 /*******************/
