--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ h1, .h1, h2, .h2, h3, .h3 {
 }
 
 .jumbo-container p {
-    margin: 50px 0px;
+    margin: 15px 0px;
     font-size: 24px;
 }
 
@@ -88,7 +88,7 @@ h1, .h1, h2, .h2, h3, .h3 {
     padding: 15px;
 }
 .logo-container img{
-    width: 270px;
+    width: 150px;
 }
 
 .button-purple {
@@ -97,3 +97,8 @@ h1, .h1, h2, .h2, h3, .h3 {
 
 /*******************/
 
+/********** Bootstrap Changes *********/
+.btn-lg button {
+  padding: 15px 30px;
+  }
+/*******************/
