--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html { 
-  background: url('/yogi.jpg') no-repeat center center fixed; 
+  background: url('/trav3.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
