--- a/style.css
+++ b/style.css
@@ -7,6 +7,16 @@ h3 {
   color: cyan;
 }
 
+h2 {
+	color: white;
+	font-size: 50px;
+}
+
+ul {
+	color: limegreen;
+	font-size: 40px;
+}
+
 .title {
 	background-color: mediumpurple;
 }
@@ -16,7 +26,7 @@ h3 {
 }
 
 .block {
-	background-color: black;
+	background-color: mediumpurple;
 	display: inline-block;
 }
 
